<resources>
    <string name="app_name">MovieCatalogHarloom</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_movie">Film</string>
    <string name="title_tv">Televisi</string>

    <string name="title_detail">%1$s %2$s</string>
    <string name="title_status">Status : %1$s</string>
    <string name="title_change_language">Change Language Settings</string>
    <string name="title" translatable="false">Title</string>
    <string name="subtile" translatable="false">Subtile</string>


    <string name="bat_woman">Kate Kane, armed with a passion for social justice and a flair for speaking her mind, soars onto the streets of Gotham as Batwoman, an out lesbian and highly trained street fighter primed to snuff out the failing city\'s criminal resurgence. But don\'t call her a hero yet. In a city desperate for a savior, Kate must overcome her own demons before embracing the call to be Gotham\'s symbol of hope</string>
    <string name="status1">Returning Series</string>
    <string name="final_space">An astronaut named Gary and his planet-destroying sidekick Mooncake embark on serialized journeys through space in order to unlock the mystery of “Final Space,” the last point in the universe, if it actually does exist.</string>
    <string name="assasin_pride">In the world only the aristocrats have the power to fight the monster - mana. Even though Melida Angel was born in an aristocracy and studies at an academy developing mana users, she has no mana. To find her talent for mana, Kufa Vampir was sent to be her tutor but at the same time, he was ordered to assassinate her if she has no talent for mana. He makes a cruel decision to assassinate her because he thinks that it is a wasted effort that people who have not any mana are working hard in this world… However, he asks her, \"Do you want to try to entrust your life to me?\" He is not as an assassin nor a tutor. He is someone betting on his pride as an assassin tutor, to show the world what Melida is capable of!</string>
    <string name="euphoria">A group of high school students navigate love and friendships in a world of drugs, sex, trauma, and social media.</string>
    <string name="servant">A Philadelphia couple are in mourning after an unspeakable tragedy creates a rift in their marriage and opens the door for a mysterious force to enter their home.</string>
    <string name="thel">In this sequel to The L Word, we continue to follow the intermingled lives of Bette Porter, Alice Pieszecki and Shane McCutcheon, along with a new generation of diverse, self-possessed LGBTQIA+ characters experiencing love, heartbreak, sex, setbacks and success in L.A.</string>
    <string name="dr_stone">One fateful day, all of humanity was petrified by a blinding flash of light. After several millennia, high schooler Taiju awakens and finds himself lost in a world of statues. However, he\'s not alone! His science-loving friend Senku\'s been up and running for a few months and he\'s got a grand plan in mind, to kickstart civilization with the power of science!</string>
    <string name="fgo">Following the success in the Camelot Singularity, Ritsuka Fujimaru and Mash Kyrielight are assigned to the last Singularity in the Grand Order initiative. In Ancient Babylonia, 2500 BCE, they embark on a mission to secure humanity\'s survival. Upon arrival, they learn that three gods have threatened Uruk, the Babylonian city ruled by King Gilgamesh. Ritsuka and Mash must work together to fend off the invasion of mysterious beasts in Uruk under Gilgamesh\'s orders while investigating the true nature of the three gods\' actions against humanity; but unknown to Ritsuka, an ancient entity is slowly rising from its slumber.</string>
    <string name="farm">Fed up with her father, a woman moves in with her older half-sister, and her fiancé.</string>
    <string name="goodOmens">Aziraphale, an angel, and Crowley, a demon, join forces to find the Antichrist and stop Armageddon.</string>
    <string name="status2">Ended</string>


    <string name="api_key_v3" translatable="false">681b436ab539d57c9768f90081fc936b</string>
    <string name="title_rating">Ratings : %1$s</string>
    <string name="title_activity_favorit">Favorit</string>
    <string name="tab_text_1">Movie</string>
    <string name="tab_text_2">Tv</string>
    <string name="poster">Poster</string>
    <string name="agree">Yes</string>
    <string name="disagree">No</string>
    <string name="title_alert">Are Your Sure?</string>
    <string name="your_message">Data Cannot Back!</string>
    <string name="title_settings_reminder">Settings Reminder</string>
    <string name="search_title">Search</string>
    <string name="channel_reminder" translatable="false">reminderChannel</string>
    <string name="channel_description" translatable="false">ReminderChannel</string>
    <string name="channel_id_reminder" translatable="false">ID_REMINDER</string>
    <string name="channel_id_release" translatable="false">ID_ReleaseToday</string>
    <string name="channel_release" translatable="false">ReleaseChannel</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="reminder_release">New Release Reminder</string>
    <string name="reminder_daily">Daily Reminder</string>
    <string name="release_summary_off" translatable="false">Reminder Release Movie Today</string>
    <string name="release_summary_on" translatable="false">Reminder Release Today</string>
    <string name="daily_summary_off" translatable="false">Reminder for retrun App</string>
    <string name="daily_summary_on" translatable="false">Reminder for retrun App On</string>
    <string name="key_release_today" translatable="false">release_today</string>
    <string name="key_daily" translatable="false">daily</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="empty_text" translatable="false">Empty</string>
    <string name="appwigetText">Movie Favorit</string>


</resources>
