<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/title_settings_reminder">

        <SwitchPreference
            app:key="@string/key_release_today"
            app:icon="@drawable/ic_fiber_new"
            app:summaryOff="@string/release_summary_off"
            app:summaryOn="@string/release_summary_on"
            app:title="@string/reminder_release" />


        <SwitchPreference
            app:key="@string/key_daily"
            app:icon="@drawable/ic_add_alert"
            app:summaryOff="@string/daily_summary_off"
            app:summaryOn="@string/daily_summary_on"
            app:title="@string/reminder_daily" />

    </PreferenceCategory>

</PreferenceScreen>
